fix overflow-x

--- a/styling/Reservation.css
+++ b/styling/Reservation.css
@@ -1,8 +1,8 @@
-/*css for HEADER*/
-body {
-  font-family: sans-serif;
-  max-width: 1600px;
+* {
+  margin: auto;
+  overflow-x: hidden;
 }
+/*css for HEADER*/
 
 header::after {
   content: "";
@@ -16,7 +16,7 @@ header::after {
 
 .logomain {
   float: left;
-  margin-left: -50px;
+  margin-left: -10px;
   width: 250px;
   height: 100px;
 }
@@ -30,6 +30,7 @@ nav {
   float: right;
   width: 50%;
   margin-right: -10%;
+  padding-top: 10px;
 }
 
 nav ul {
@@ -65,13 +66,98 @@ hr.line {
 }
 
 /*css for MAIN BODY*/
+body {
+  font-family: sans-serif;
+  max-width: 1600px;
+}
+
+.formbody {
+  background-image: url(../resource/podium.jpg);
+  background-position: center;
+  background-size: contain;
+  height: 900px;
+  margin-top: -5px;
+  font-family: sans-serif;
+}
 
 .mainform {
   text-align: center;
   width: 800px;
-  background-color: rgb(0, 0, 0, 0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   margin: auto;
-  color: #ffffff;
+  color: black;
   padding: 10px 0px 10px 0px;
   border-radius: 15px 15px 0px 0px;
+  margin-top: 20px;
+}
+
+.main {
+  background-color: rgba(255, 255, 255, 0.253);
+  width: 800px;
+  margin: auto;
+}
+
+form {
+  padding: 10px;
+}
+
+.name {
+  margin-left: 25px;
+  margin-top: 30px;
+  width: 125px;
+  font-size: 18px;
+  color: white;
+  font-weight: 700;
+}
+
+.firstname {
+  position: relative;
+  left: 200px;
+  top: -37px;
+  line-height: 40px;
+  border-radius: 6px;
+  padding: 0 22px;
+  font-size: 16px;
+}
+.lastname {
+  position: relative;
+  left: 250px;
+  top: -37px;
+  line-height: 40px;
+  border-radius: 6px;
+  padding: 0 22px;
+  font-size: 16px;
+}
+
+.email {
+  position: relative;
+  left: 200px;
+  top: -37px;
+  line-height: 40px;
+  width: 432px;
+  border-radius: 6px;
+  padding: 0 22px;
+  font-size: 16px;
+}
+
+.pnum {
+  position: relative;
+  left: 200px;
+  top: -37px;
+  line-height: 40px;
+  width: 132px;
+  border-radius: 6px;
+  padding: 0 22px;
+  font-size: 16px;
+}
+
+.ic {
+  position: relative;
+  left: 200px;
+  top: -37px;
+  line-height: 40px;
+  width: 132px;
+  border-radius: 6px;
+  padding: 0 22px;
+  font-size: 16px;
 }
